# chatapp

./: test.ts  todo.txt
chatapp/: .env.development  .env.test  .eslintrc.json  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts
chatapp/src/app/: chatbox.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
chatapp/src/app/_chatbox/: chatbox.tsx  imagePreview.tsx  imageUpload.tsx  messageBubble.tsx  types.ts
chatapp/src/app/_chatbox/__tests__/: chatbox.test.tsx  imageUpload.test.tsx  messageBubble.test.tsx
chatapp/src/app/_components/: login.tsx  navbar.tsx
chatapp/src/app/_login/: login.tsx
chatapp/src/app/chat/: page.tsx
chatapp/src/app/chat/_chatbox/: chatbox.tsx  imagePreview.tsx  messageBubble.tsx
chatapp/src/app/register/: page.tsx
chatapp/src/components/: authForm.tsx  passwordInput.tsx
chatapp/src/context/: userContext.tsx
chatapp/src/hooks/: useChatSocket.ts  useSession.ts
chatapp/src/lib/: api.ts  constants.ts  session.ts
socket_server/: .gitignore  Cargo.toml  Dockerfile  databse.db3
socket_server/src/: db.rs  file_upload.rs  lib.rs  login.rs  main.rs  session.rs  web_socket.rs
socket_server/src/routes/: check_session.rs  create_user.rs  file_upload.rs  login.rs  mod.rs  web_socket.rs
socket_server/tests/: file_upload_test.rs  websocket_test.rs
web_server/: .gitignore  Cargo.toml  Dockerfile  databse.db3
web_server/src/: main.rs
web_server/src/routes/: check_session.rs
web_server/tests/: file_upload_test.rs
web_server/tests/common/: mod.rs
(+10 files in other folders)
