[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features=["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http =  { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"