[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
axum = { version = "0.7.5", features = ["ws", "multipart"] }
axum-extra = { version = "0.9.3", features=["cookie"] }
tower-http =  { version = "0.5.2", features = ["full"] }
http = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.10.0"

[dev-dependencies]
reqwest = { version = "0.12.5", features=["multipart"] }
tokio-tungstenite = "0.22"